@@ -10,6 +10,7 @@ milestones_initial_preset=Initial preset
 milestones_compact_list=Compact list
 milestones_list_by_group=List by group
 milestones_show_estimations=Show estimations
+milestones_disable_chat_notifications=Disable milestone notifications
 
 [mod-setting-description]
 milestones_check_frequency=The mod will wait this many ticks between each completion check.\nLower this if you care about time precision, raise if you want less performance impact.\nIf you set this to less than 60, the GUI will also show milliseconds.
@@ -17,6 +18,7 @@ milestones_initial_preset=Initial preset loaded at the start of a map. Has no ef
 milestones_compact_list=Removes the "Completed at" labels before each time.
 milestones_list_by_group=If checked, milestones will be grouped together in categories.\nIf unchecked, all milestones will be listed together chronologically.
 milestones_show_estimations=If checked, milestone times that were estimated from production history will show the estimation precision after the time (Looks like "(±5m)").
+milestones_disable_chat_notifications=If checked, no chat notification will appear when a new milestone is reached. This is per-player, so it only affects you.
 
 [shortcut-name]
 milestones_toggle_gui=Show milestones
