@@ -31,5 +31,11 @@ data:extend{
         name = "milestones_show_estimations",
         setting_type = "runtime-per-user",
         default_value = true,
+    },
+    {
+        type = "bool-setting",
+        name = "milestones_disable_chat_notifications",
+        setting_type = "runtime-per-user",
+        default_value = false,
     }
 }
