@@ -1,7 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.18
 Date: ????
-  Changes:
+
+  Features:
+    - Added "Disable milestone notifications" mod setting which turns off chat notifications. This is a player setting, so each player can have it set the way they want.
+
+  Locale:
+    - Updated Japanese translation thanks to nojio.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.17
 Date: 2023-04-09
